--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /Neo Trinkey/Secret/.vs/Secret/v16
+/Neo Trinkey/Secret/Release
+/Neo Trinkey/Secret/__vm
