--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@
 /Neo Trinkey/Secret/.vs/Secret/v16
 /Neo Trinkey/Secret/Release
 /Neo Trinkey/Secret/__vm
+/Neo Trinkey/Util/.vs/Util/v16
+/Neo Trinkey/Util/Release
+/Neo Trinkey/Util/__vm
