--- a/Neo Trinkey/Util/Util.vcxproj
+++ b/Neo Trinkey/Util/Util.vcxproj
@@ -114,6 +114,9 @@
     <ClCompile Include="MenuConfiguration.cpp" />
     <ClCompile Include="MenuMain.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="Notes.txt" />
+  </ItemGroup>
   <PropertyGroup>
     <DebuggerFlavor>VisualMicroDebugger</DebuggerFlavor>
   </PropertyGroup>
