add circuit playground demos

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,16 @@
 /Neo Trinkey/Util/.vs/Util/v16
 /Neo Trinkey/Util/Release
 /Neo Trinkey/Util/__vm
+/Release
+/__vm
+
+/Circuit Playground/accel_mouse/Release
+/Circuit Playground/demo/Release
+/Circuit Playground/external_neopixels/Release
+/Circuit Playground/FidgetSpinner/Debug
+/Circuit Playground/tachometer_led_display/__vm
+/Circuit Playground/accel_mouse/__vm
+/Circuit Playground/.vs/Circuit Playground/v16
+/Circuit Playground/demo/__vm
+/Circuit Playground/external_neopixels/__vm
+/Circuit Playground/FidgetSpinner/__vm
