--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,8 @@
 /Circuit Playground/demo/__vm
 /Circuit Playground/external_neopixels/__vm
 /Circuit Playground/FidgetSpinner/__vm
+/Circuit Playground/mega_demo/__vm
+/Circuit Playground/comm_badge/Release
+/Circuit Playground/comm_badge/__vm
+/Circuit Playground/Microphone_Demos/mic_FFT_classic/__vm
+/Circuit Playground/Microphone_Demos/Birthday_Candles/__vm
