--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,6 @@
 /Circuit Playground/comm_badge/__vm
 /Circuit Playground/Microphone_Demos/mic_FFT_classic/__vm
 /Circuit Playground/Microphone_Demos/Birthday_Candles/__vm
+/HUZZAH ESP8266/BasicOTA/.vs/BasicOTA/v16
+/HUZZAH ESP8266/BasicOTA/__vm
+/HUZZAH ESP8266/BasicOTA/Release
