add oled sample

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,6 @@
 /HUZZAH ESP8266/BasicOTA/.vs/BasicOTA/v16
 /HUZZAH ESP8266/BasicOTA/__vm
 /HUZZAH ESP8266/BasicOTA/Release
+/HUZZAH ESP8266/WiFiDevice/.vs/WiFiDevice/v16
+/HUZZAH ESP8266/WiFiDevice/__vm
+/HUZZAH ESP8266/WiFiDevice/Release
