--- a/HUZZAH ESP8266/WiFiDevice/WiFiDevice.vcxproj.filters
+++ b/HUZZAH ESP8266/WiFiDevice/WiFiDevice.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="DeviceOTA.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Configs.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="Notes.txt" />
