--- a/HUZZAH ESP8266/WiFiDevice/WiFiDevice.vcxproj.filters
+++ b/HUZZAH ESP8266/WiFiDevice/WiFiDevice.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="Configs.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="DeviceAHT.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="Notes.txt" />
@@ -40,6 +43,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="DeviceOTA.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="DeviceAHT.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
