Add BSEC project

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,6 @@
 /HUZZAH ESP8266/WiFiDevice/.vs/WiFiDevice/v16
 /HUZZAH ESP8266/WiFiDevice/__vm
 /HUZZAH ESP8266/WiFiDevice/Release
+/HUZZAH ESP8266/BSEC/Release
+/HUZZAH ESP8266/BSEC/.vs/BSEC/v16
+/HUZZAH ESP8266/BSEC/__vm
