--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,7 @@
 /HUZZAH ESP8266/BSEC/Release
 /HUZZAH ESP8266/BSEC/.vs/BSEC/v16
 /HUZZAH ESP8266/BSEC/__vm
+/HUZZAH ESP8266/MQTT_TEST/.vs/MQTT_TEST/v16
+
+/HUZZAH ESP8266/MQTT_TEST/Release
+/HUZZAH ESP8266/MQTT_TEST/__vm
