--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,7 @@
 
 /HUZZAH ESP8266/MQTT_TEST/Release
 /HUZZAH ESP8266/MQTT_TEST/__vm
+/Circuit Playground Bluefruit/BLE UART/.vs/BLE UART/v16
+/Circuit Playground Bluefruit/BLE UART/__vm
+/PyRuler/Test/.vs/Test/v16
+/PyRuler/Test/__vm
